--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Jonathan - Desenvolvedor e Analista de Qualidade</title>
   <meta name="description" content="Desenvolvedor Front End e Designer Localizado em Florianópolis">
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
